parser/y.output

state 0
	$accept: .Start $end 

	PACKAGE  shift 4
	.  error

	PackageClause  goto 3
	SourceFile  goto 2
	Start  goto 1

state 1
	$accept:  Start.$end 

	$end  accept
	.  error


state 2
	Start:  SourceFile.    (251)

	.  reduce 251 (src line 1593)


state 3
	SourceFile:  PackageClause.';' SourceFile1 SourceFile2 

	';'  shift 5
	.  error


state 4
	PackageClause:  PACKAGE.PackageName 

	IDENTIFIER  shift 7
	.  error

	PackageName  goto 6

state 5
	SourceFile:  PackageClause ';'.SourceFile1 SourceFile2 
	SourceFile1: .    (247)

	.  reduce 247 (src line 1573)

	SourceFile1  goto 8

state 6
	PackageClause:  PACKAGE PackageName.    (178)

	.  reduce 178 (src line 1217)


state 7
	PackageName:  IDENTIFIER.    (179)

	.  reduce 179 (src line 1223)


state 8
	SourceFile:  PackageClause ';' SourceFile1.SourceFile2 
	SourceFile1:  SourceFile1.ImportDecl ';' 
	SourceFile2: .    (249)

	IMPORT  shift 11
	.  reduce 249 (src line 1583)

	ImportDecl  goto 10
	SourceFile2  goto 9

state 9
	SourceFile:  PackageClause ';' SourceFile1 SourceFile2.    (246)
	SourceFile2:  SourceFile2.TopLevelDecl ';' 

	CONST  shift 20
	FUNC  shift 19
	TYPE  shift 21
	VAR  shift 22
	.  reduce 246 (src line 1567)

	ConstDecl  goto 16
	Declaration  goto 13
	FunctionDecl  goto 14
	MethodDecl  goto 15
	TopLevelDecl  goto 12
	TypeDecl  goto 17
	VarDecl  goto 18

state 10
	SourceFile1:  SourceFile1 ImportDecl.';' 

	';'  shift 23
	.  error


state 11
	ImportDecl:  IMPORT.ImportDecl1 
	ImportSpec1: .    (129)

	IDENTIFIER  shift 7
	'('  shift 26
	'.'  shift 29
	.  reduce 129 (src line 965)

	ImportDecl1  goto 24
	ImportSpec  goto 25
	ImportSpec1  goto 27
	ImportSpec11  goto 28
	PackageName  goto 30

state 12
	SourceFile2:  SourceFile2 TopLevelDecl.';' 

	';'  shift 31
	.  error


state 13
	TopLevelDecl:  Declaration.    (276)

	.  reduce 276 (src line 1709)


state 14
	TopLevelDecl:  FunctionDecl.    (277)

	.  reduce 277 (src line 1714)


state 15
	TopLevelDecl:  MethodDecl.    (278)

	.  reduce 278 (src line 1718)


state 16
	Declaration:  ConstDecl.    (54)

	.  reduce 54 (src line 565)


state 17
	Declaration:  TypeDecl.    (55)

	.  reduce 55 (src line 570)


state 18
	Declaration:  VarDecl.    (56)

	.  reduce 56 (src line 574)


state 19
	FunctionDecl:  FUNC.FunctionName Signature FunctionDecl1 
	MethodDecl:  FUNC.Receiver MethodName Signature MethodDecl1 

	IDENTIFIER  shift 34
	'('  shift 36
	.  error

	FunctionName  goto 32
	Parameters  goto 35
	Receiver  goto 33

state 20
	ConstDecl:  CONST.ConstDecl1 

	IDENTIFIER  shift 41
	'('  shift 39
	.  error

	ConstDecl1  goto 37
	ConstSpec  goto 38
	IdentifierList  goto 40

state 21
	TypeDecl:  TYPE.TypeDecl1 

	IDENTIFIER  shift 47
	'('  shift 44
	.  error

	AliasDecl  goto 45
	TypeDecl1  goto 42
	TypeDef  goto 46
	TypeSpec  goto 43

state 22
	VarDecl:  VAR.VarDecl1 

	IDENTIFIER  shift 41
	'('  shift 50
	.  error

	IdentifierList  goto 51
	VarDecl1  goto 48
	VarSpec  goto 49

state 23
	SourceFile1:  SourceFile1 ImportDecl ';'.    (248)

	.  reduce 248 (src line 1578)


state 24
	ImportDecl:  IMPORT ImportDecl1.    (122)

	.  reduce 122 (src line 927)


state 25
	ImportDecl1:  ImportSpec.    (123)

	.  reduce 123 (src line 933)


state 26
	ImportDecl1:  '('.ImportDecl11 ')' 
	ImportDecl11: .    (125)

	.  reduce 125 (src line 943)

	ImportDecl11  goto 52

state 27
	ImportSpec:  ImportSpec1.ImportPath 

	STRING_LIT  shift 54
	.  error

	ImportPath  goto 53

state 28
	ImportSpec1:  ImportSpec11.    (130)

	.  reduce 130 (src line 970)


state 29
	ImportSpec11:  '.'.    (131)

	.  reduce 131 (src line 975)


state 30
	ImportSpec11:  PackageName.    (132)

	.  reduce 132 (src line 980)


state 31
	SourceFile2:  SourceFile2 TopLevelDecl ';'.    (250)

	.  reduce 250 (src line 1588)


state 32
	FunctionDecl:  FUNC FunctionName.Signature FunctionDecl1 

	'('  shift 36
	.  error

	Parameters  goto 56
	Signature  goto 55

state 33
	MethodDecl:  FUNC Receiver.MethodName Signature MethodDecl1 

	IDENTIFIER  shift 58
	.  error

	MethodName  goto 57

state 34
	FunctionName:  IDENTIFIER.    (108)

	.  reduce 108 (src line 851)


state 35
	Receiver:  Parameters.    (209)

	.  reduce 209 (src line 1375)


36: shift/reduce conflict (shift 41(0), red'n 181(0)) on IDENTIFIER
state 36
	Parameters:  '('.Parameters1 ')' 
	Parameters1: .    (189)
	ParameterDecl1: .    (181)

	IDENTIFIER  shift 41
	')'  reduce 189 (src line 1277)
	.  reduce 181 (src line 1235)

	IdentifierList  goto 63
	ParameterDecl  goto 61
	ParameterDecl1  goto 62
	ParameterList  goto 60
	Parameters1  goto 59

state 37
	ConstDecl:  CONST ConstDecl1.    (38)

	.  reduce 38 (src line 481)


state 38
	ConstDecl1:  ConstSpec.    (39)

	.  reduce 39 (src line 487)


state 39
	ConstDecl1:  '('.ConstDecl11 ')' 
	ConstDecl11: .    (41)

	.  reduce 41 (src line 497)

	ConstDecl11  goto 64

state 40
	ConstSpec:  IdentifierList.ConstSpec1 
	ConstSpec1: .    (44)
	ConstSpec11: .    (46)

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	';'  reduce 44 (src line 513)
	'*'  shift 84
	.  reduce 46 (src line 523)

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	ConstSpec1  goto 65
	ConstSpec11  goto 66
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 67
	TypeLit  goto 69
	TypeName  goto 68

state 41
	IdentifierList:  IDENTIFIER.IdentifierList1 
	IdentifierList1: .    (113)

	.  reduce 113 (src line 881)

	IdentifierList1  goto 91

state 42
	TypeDecl:  TYPE TypeDecl1.    (284)

	.  reduce 284 (src line 1749)


state 43
	TypeDecl1:  TypeSpec.    (285)

	.  reduce 285 (src line 1755)


state 44
	TypeDecl1:  '('.TypeDecl11 ')' 
	TypeDecl11: .    (287)

	.  reduce 287 (src line 1765)

	TypeDecl11  goto 92

state 45
	TypeSpec:  AliasDecl.    (303)

	.  reduce 303 (src line 1841)


state 46
	TypeSpec:  TypeDef.    (304)

	.  reduce 304 (src line 1846)


state 47
	AliasDecl:  IDENTIFIER.'=' Type 
	TypeDef:  IDENTIFIER.Type 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'='  shift 93
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 94
	TypeLit  goto 69
	TypeName  goto 68

state 48
	VarDecl:  VAR VarDecl1.    (317)

	.  reduce 317 (src line 1913)


state 49
	VarDecl1:  VarSpec.    (318)

	.  reduce 318 (src line 1919)


state 50
	VarDecl1:  '('.VarDecl11 ')' 
	VarDecl11: .    (320)

	.  reduce 320 (src line 1929)

	VarDecl11  goto 95

state 51
	VarSpec:  IdentifierList.VarSpec1 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'='  shift 98
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 97
	TypeLit  goto 69
	TypeName  goto 68
	VarSpec1  goto 96

state 52
	ImportDecl1:  '(' ImportDecl11.')' 
	ImportDecl11:  ImportDecl11.ImportSpec ';' 
	ImportSpec1: .    (129)

	IDENTIFIER  shift 7
	')'  shift 99
	'.'  shift 29
	.  reduce 129 (src line 965)

	ImportSpec  goto 100
	ImportSpec1  goto 27
	ImportSpec11  goto 28
	PackageName  goto 30

state 53
	ImportSpec:  ImportSpec1 ImportPath.    (128)

	.  reduce 128 (src line 959)


state 54
	ImportPath:  STRING_LIT.    (127)

	.  reduce 127 (src line 953)


state 55
	FunctionDecl:  FUNC FunctionName Signature.FunctionDecl1 
	FunctionDecl1: .    (105)

	'{'  shift 104
	.  reduce 105 (src line 835)

	Block  goto 103
	FunctionBody  goto 102
	FunctionDecl1  goto 101

56: shift/reduce conflict (shift 109(0), red'n 229(0)) on '('
state 56
	Signature:  Parameters.Signature1 
	Signature1: .    (229)

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 109
	'['  shift 82
	'*'  shift 84
	.  reduce 229 (src line 1485)

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	Parameters  goto 107
	PointerType  goto 75
	QualifiedIdent  goto 72
	Result  goto 106
	Signature1  goto 105
	SliceType  goto 78
	StructType  goto 74
	Type  goto 108
	TypeLit  goto 69
	TypeName  goto 68

state 57
	MethodDecl:  FUNC Receiver MethodName.Signature MethodDecl1 

	'('  shift 36
	.  error

	Parameters  goto 56
	Signature  goto 110

state 58
	MethodName:  IDENTIFIER.    (170)

	.  reduce 170 (src line 1177)


state 59
	Parameters:  '(' Parameters1.')' 

	')'  shift 111
	.  error


state 60
	Parameters1:  ParameterList.Parameters11 
	Parameters11: .    (191)

	','  shift 113
	.  reduce 191 (src line 1287)

	Parameters11  goto 112

state 61
	ParameterList:  ParameterDecl.ParameterList1 
	ParameterList1: .    (186)

	.  reduce 186 (src line 1261)

	ParameterList1  goto 114

state 62
	ParameterDecl:  ParameterDecl1.ParameterDecl2 Type 
	ParameterDecl2: .    (183)

	TOK2  shift 116
	.  reduce 183 (src line 1245)

	ParameterDecl2  goto 115

state 63
	ParameterDecl1:  IdentifierList.    (182)

	.  reduce 182 (src line 1240)


state 64
	ConstDecl1:  '(' ConstDecl11.')' 
	ConstDecl11:  ConstDecl11.ConstSpec ';' 

	IDENTIFIER  shift 41
	')'  shift 117
	.  error

	ConstSpec  goto 118
	IdentifierList  goto 40

state 65
	ConstSpec:  IdentifierList ConstSpec1.    (43)

	.  reduce 43 (src line 507)


state 66
	ConstSpec1:  ConstSpec11.'=' ExpressionList 

	'='  shift 119
	.  error


state 67
	ConstSpec11:  Type.    (47)

	.  reduce 47 (src line 528)


state 68
	Type:  TypeName.    (279)

	.  reduce 279 (src line 1723)


state 69
	Type:  TypeLit.    (280)

	.  reduce 280 (src line 1728)


state 70
	Type:  '('.Type ')' 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 120
	TypeLit  goto 69
	TypeName  goto 68

 71: reduce/reduce conflict  (red'ns 179 and 301) on '.'
state 71
	PackageName:  IDENTIFIER.    (179)
	TypeName:  IDENTIFIER.    (301)

	'.'  reduce 179 (src line 1223)
	.  reduce 301 (src line 1831)


state 72
	TypeName:  QualifiedIdent.    (302)

	.  reduce 302 (src line 1836)


state 73
	TypeLit:  ArrayType.    (293)

	.  reduce 293 (src line 1797)


state 74
	TypeLit:  StructType.    (294)

	.  reduce 294 (src line 1802)


state 75
	TypeLit:  PointerType.    (295)

	.  reduce 295 (src line 1806)


state 76
	TypeLit:  FunctionType.    (296)

	.  reduce 296 (src line 1810)


state 77
	TypeLit:  InterfaceType.    (297)

	.  reduce 297 (src line 1814)


state 78
	TypeLit:  SliceType.    (298)

	.  reduce 298 (src line 1818)


state 79
	TypeLit:  MapType.    (299)

	.  reduce 299 (src line 1822)


state 80
	TypeLit:  ChannelType.    (300)

	.  reduce 300 (src line 1826)


state 81
	QualifiedIdent:  PackageName.'.' IDENTIFIER 

	'.'  shift 121
	.  error


state 82
	ArrayType:  '['.ArrayLength ']' ElementType 
	SliceType:  '['.']' ElementType 

	FLOAT_LIT  shift 143
	IDENTIFIER  shift 139
	IMAGINARY_LIT  shift 144
	INT_LIT  shift 142
	RUNE_LIT  shift 145
	STRING_LIT  shift 146
	UNARY_OP  shift 127
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 148
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 133
	'['  shift 153
	']'  shift 123
	'*'  shift 84
	.  error

	ArrayLength  goto 122
	ArrayType  goto 149
	BasicLit  goto 136
	ChannelType  goto 80
	ChannelType1  goto 88
	CompositeLit  goto 137
	Conversion  goto 129
	Expression  goto 124
	FunctionLit  goto 138
	FunctionType  goto 76
	InterfaceType  goto 77
	Literal  goto 131
	LiteralType  goto 147
	MapType  goto 152
	MethodExpr  goto 130
	Operand  goto 128
	OperandName  goto 132
	PackageName  goto 81
	PointerType  goto 75
	PrimaryExpr  goto 126
	QualifiedIdent  goto 140
	ReceiverType  goto 135
	SliceType  goto 151
	StructType  goto 150
	Type  goto 134
	TypeLit  goto 69
	TypeName  goto 141
	UnaryExpr  goto 125

state 83
	StructType:  STRUCT.'{' StructType1 '}' 

	'{'  shift 154
	.  error


state 84
	PointerType:  '*'.BaseType 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	BaseType  goto 155
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 156
	TypeLit  goto 69
	TypeName  goto 68

state 85
	FunctionType:  FUNC.Signature 

	'('  shift 36
	.  error

	Parameters  goto 56
	Signature  goto 157

state 86
	InterfaceType:  INTERFACE.'{' InterfaceType1 '}' 

	'{'  shift 158
	.  error


state 87
	MapType:  MAP.'[' KeyType ']' ElementType 

	'['  shift 159
	.  error


state 88
	ChannelType:  ChannelType1.ElementType 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	ElementType  goto 160
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 161
	TypeLit  goto 69
	TypeName  goto 68

89: shift/reduce conflict (shift 162(0), red'n 28(0)) on TOK5
state 89
	ChannelType1:  CHAN.    (28)
	ChannelType1:  CHAN.TOK5 

	TOK5  shift 162
	.  reduce 28 (src line 429)


state 90
	ChannelType1:  TOK5.CHAN 

	CHAN  shift 163
	.  error


state 91
	IdentifierList:  IDENTIFIER IdentifierList1.    (112)
	IdentifierList1:  IdentifierList1.',' IDENTIFIER 

	','  shift 164
	.  reduce 112 (src line 875)


state 92
	TypeDecl1:  '(' TypeDecl11.')' 
	TypeDecl11:  TypeDecl11.TypeSpec ';' 

	IDENTIFIER  shift 47
	')'  shift 165
	.  error

	AliasDecl  goto 45
	TypeDef  goto 46
	TypeSpec  goto 166

state 93
	AliasDecl:  IDENTIFIER '='.Type 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 167
	TypeLit  goto 69
	TypeName  goto 68

state 94
	TypeDef:  IDENTIFIER Type.    (289)

	.  reduce 289 (src line 1775)


state 95
	VarDecl1:  '(' VarDecl11.')' 
	VarDecl11:  VarDecl11.VarSpec ';' 

	IDENTIFIER  shift 41
	')'  shift 168
	.  error

	IdentifierList  goto 51
	VarSpec  goto 169

state 96
	VarSpec:  IdentifierList VarSpec1.    (322)

	.  reduce 322 (src line 1939)


state 97
	VarSpec1:  Type.VarSpec11 
	VarSpec11: .    (325)

	'='  shift 171
	.  reduce 325 (src line 1955)

	VarSpec11  goto 170

state 98
	VarSpec1:  '='.ExpressionList 

	FLOAT_LIT  shift 143
	IDENTIFIER  shift 139
	IMAGINARY_LIT  shift 144
	INT_LIT  shift 142
	RUNE_LIT  shift 145
	STRING_LIT  shift 146
	UNARY_OP  shift 127
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 148
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 133
	'['  shift 153
	'*'  shift 84
	.  error

	ArrayType  goto 149
	BasicLit  goto 136
	ChannelType  goto 80
	ChannelType1  goto 88
	CompositeLit  goto 137
	Conversion  goto 129
	Expression  goto 173
	ExpressionList  goto 172
	FunctionLit  goto 138
	FunctionType  goto 76
	InterfaceType  goto 77
	Literal  goto 131
	LiteralType  goto 147
	MapType  goto 152
	MethodExpr  goto 130
	Operand  goto 128
	OperandName  goto 132
	PackageName  goto 81
	PointerType  goto 75
	PrimaryExpr  goto 126
	QualifiedIdent  goto 140
	ReceiverType  goto 135
	SliceType  goto 151
	StructType  goto 150
	Type  goto 134
	TypeLit  goto 69
	TypeName  goto 141
	UnaryExpr  goto 125

state 99
	ImportDecl1:  '(' ImportDecl11 ')'.    (124)

	.  reduce 124 (src line 938)


state 100
	ImportDecl11:  ImportDecl11 ImportSpec.';' 

	';'  shift 174
	.  error


state 101
	FunctionDecl:  FUNC FunctionName Signature FunctionDecl1.    (104)

	.  reduce 104 (src line 829)


state 102
	FunctionDecl1:  FunctionBody.    (106)

	.  reduce 106 (src line 840)


state 103
	FunctionBody:  Block.    (103)

	.  reduce 103 (src line 823)


state 104
	Block:  '{'.StatementList '}' 
	StatementList1: .    (268)

	.  reduce 268 (src line 1667)

	StatementList  goto 175
	StatementList1  goto 176

state 105
	Signature:  Parameters Signature1.    (228)

	.  reduce 228 (src line 1479)


state 106
	Signature1:  Result.    (230)

	.  reduce 230 (src line 1490)


state 107
	Result:  Parameters.    (217)

	.  reduce 217 (src line 1419)


state 108
	Result:  Type.    (218)

	.  reduce 218 (src line 1424)


109: shift/reduce conflict (shift 177(0), red'n 181(0)) on IDENTIFIER
109: shift/reduce conflict (shift 90(0), red'n 181(0)) on TOK5
109: shift/reduce conflict (shift 89(0), red'n 181(0)) on CHAN
109: shift/reduce conflict (shift 85(0), red'n 181(0)) on FUNC
109: shift/reduce conflict (shift 86(0), red'n 181(0)) on INTERFACE
109: shift/reduce conflict (shift 87(0), red'n 181(0)) on MAP
109: shift/reduce conflict (shift 83(0), red'n 181(0)) on STRUCT
109: shift/reduce conflict (shift 70(0), red'n 181(0)) on '('
109: shift/reduce conflict (shift 82(0), red'n 181(0)) on '['
109: shift/reduce conflict (shift 84(0), red'n 181(0)) on '*'
state 109
	Parameters:  '('.Parameters1 ')' 
	Type:  '('.Type ')' 
	Parameters1: .    (189)
	ParameterDecl1: .    (181)

	IDENTIFIER  shift 177
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	')'  reduce 189 (src line 1277)
	'['  shift 82
	'*'  shift 84
	.  reduce 181 (src line 1235)

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	IdentifierList  goto 63
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	ParameterDecl  goto 61
	ParameterDecl1  goto 62
	ParameterList  goto 60
	Parameters1  goto 59
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 120
	TypeLit  goto 69
	TypeName  goto 68

state 110
	MethodDecl:  FUNC Receiver MethodName Signature.MethodDecl1 
	MethodDecl1: .    (167)

	'{'  shift 104
	.  reduce 167 (src line 1161)

	Block  goto 103
	FunctionBody  goto 179
	MethodDecl1  goto 178

state 111
	Parameters:  '(' Parameters1 ')'.    (188)

	.  reduce 188 (src line 1271)


state 112
	Parameters1:  ParameterList Parameters11.    (190)

	.  reduce 190 (src line 1282)


state 113
	Parameters11:  ','.    (192)

	.  reduce 192 (src line 1292)


114: shift/reduce conflict (shift 180(0), red'n 185(0)) on ','
state 114
	ParameterList:  ParameterDecl ParameterList1.    (185)
	ParameterList1:  ParameterList1.',' ParameterDecl 

	','  shift 180
	.  reduce 185 (src line 1255)


state 115
	ParameterDecl:  ParameterDecl1 ParameterDecl2.Type 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 181
	TypeLit  goto 69
	TypeName  goto 68

state 116
	ParameterDecl2:  TOK2.    (184)

	.  reduce 184 (src line 1250)


state 117
	ConstDecl1:  '(' ConstDecl11 ')'.    (40)

	.  reduce 40 (src line 492)


state 118
	ConstDecl11:  ConstDecl11 ConstSpec.';' 

	';'  shift 182
	.  error


state 119
	ConstSpec1:  ConstSpec11 '='.ExpressionList 

	FLOAT_LIT  shift 143
	IDENTIFIER  shift 139
	IMAGINARY_LIT  shift 144
	INT_LIT  shift 142
	RUNE_LIT  shift 145
	STRING_LIT  shift 146
	UNARY_OP  shift 127
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 148
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 133
	'['  shift 153
	'*'  shift 84
	.  error

	ArrayType  goto 149
	BasicLit  goto 136
	ChannelType  goto 80
	ChannelType1  goto 88
	CompositeLit  goto 137
	Conversion  goto 129
	Expression  goto 173
	ExpressionList  goto 183
	FunctionLit  goto 138
	FunctionType  goto 76
	InterfaceType  goto 77
	Literal  goto 131
	LiteralType  goto 147
	MapType  goto 152
	MethodExpr  goto 130
	Operand  goto 128
	OperandName  goto 132
	PackageName  goto 81
	PointerType  goto 75
	PrimaryExpr  goto 126
	QualifiedIdent  goto 140
	ReceiverType  goto 135
	SliceType  goto 151
	StructType  goto 150
	Type  goto 134
	TypeLit  goto 69
	TypeName  goto 141
	UnaryExpr  goto 125

state 120
	Type:  '(' Type.')' 

	')'  shift 184
	.  error


state 121
	QualifiedIdent:  PackageName '.'.IDENTIFIER 

	IDENTIFIER  shift 185
	.  error


state 122
	ArrayType:  '[' ArrayLength.']' ElementType 

	']'  shift 186
	.  error


state 123
	SliceType:  '[' ']'.ElementType 

	IDENTIFIER  shift 71
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 85
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 70
	'['  shift 82
	'*'  shift 84
	.  error

	ArrayType  goto 73
	ChannelType  goto 80
	ChannelType1  goto 88
	ElementType  goto 187
	FunctionType  goto 76
	InterfaceType  goto 77
	MapType  goto 79
	PackageName  goto 81
	PointerType  goto 75
	QualifiedIdent  goto 72
	SliceType  goto 78
	StructType  goto 74
	Type  goto 161
	TypeLit  goto 69
	TypeName  goto 68

state 124
	ArrayLength:  Expression.    (13)
	Expression:  Expression.BINARY_OP Expression 

	BINARY_OP  shift 188
	.  reduce 13 (src line 349)


state 125
	Expression:  UnaryExpr.    (77)

	.  reduce 77 (src line 687)


state 126
	PrimaryExpr:  PrimaryExpr.Selector 
	PrimaryExpr:  PrimaryExpr.Index 
	PrimaryExpr:  PrimaryExpr.Slice 
	PrimaryExpr:  PrimaryExpr.TypeAssertion 
	PrimaryExpr:  PrimaryExpr.Arguments 
	UnaryExpr:  PrimaryExpr.    (315)

	'('  shift 196
	'['  shift 195
	'.'  shift 194
	.  reduce 315 (src line 1903)

	Arguments  goto 193
	Index  goto 190
	Selector  goto 189
	Slice  goto 191
	TypeAssertion  goto 192

state 127
	UnaryExpr:  UNARY_OP.UnaryExpr 

	FLOAT_LIT  shift 143
	IDENTIFIER  shift 139
	IMAGINARY_LIT  shift 144
	INT_LIT  shift 142
	RUNE_LIT  shift 145
	STRING_LIT  shift 146
	UNARY_OP  shift 127
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 148
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 133
	'['  shift 153
	'*'  shift 84
	.  error

	ArrayType  goto 149
	BasicLit  goto 136
	ChannelType  goto 80
	ChannelType1  goto 88
	CompositeLit  goto 137
	Conversion  goto 129
	FunctionLit  goto 138
	FunctionType  goto 76
	InterfaceType  goto 77
	Literal  goto 131
	LiteralType  goto 147
	MapType  goto 152
	MethodExpr  goto 130
	Operand  goto 128
	OperandName  goto 132
	PackageName  goto 81
	PointerType  goto 75
	PrimaryExpr  goto 126
	QualifiedIdent  goto 140
	ReceiverType  goto 135
	SliceType  goto 151
	StructType  goto 150
	Type  goto 134
	TypeLit  goto 69
	TypeName  goto 141
	UnaryExpr  goto 197

state 128
	PrimaryExpr:  Operand.    (195)

	.  reduce 195 (src line 1309)


state 129
	PrimaryExpr:  Conversion.    (196)

	.  reduce 196 (src line 1314)


state 130
	PrimaryExpr:  MethodExpr.    (197)

	.  reduce 197 (src line 1318)


state 131
	Operand:  Literal.    (173)

	.  reduce 173 (src line 1193)


state 132
	Operand:  OperandName.    (174)

	.  reduce 174 (src line 1198)


state 133
	Operand:  '('.Expression ')' 
	Type:  '('.Type ')' 

	FLOAT_LIT  shift 143
	IDENTIFIER  shift 139
	IMAGINARY_LIT  shift 144
	INT_LIT  shift 142
	RUNE_LIT  shift 145
	STRING_LIT  shift 146
	UNARY_OP  shift 127
	TOK5  shift 90
	CHAN  shift 89
	FUNC  shift 148
	INTERFACE  shift 86
	MAP  shift 87
	STRUCT  shift 83
	'('  shift 133
	'['  shift 153
	'*'  shift 84
	.  error

	ArrayType  goto 149
	BasicLit  goto 136
	ChannelType  goto 80
	ChannelType1  goto 88
	CompositeLit  goto 137
	Conversion  goto 129
	Expression  goto 198
	FunctionLit  goto 138
	FunctionType  goto 76
	InterfaceType  goto 77
	Literal  goto 131
	LiteralType  goto 147
	MapType  goto 152
	MethodExpr  goto 130
	Operand  goto 128
	OperandName  goto 132
	PackageName  goto 81
	PointerType  goto 75
	PrimaryExpr  goto 126
	QualifiedIdent  goto 140
	ReceiverType  goto 135
	SliceType  goto 151
	StructType  goto 150
	Type  goto 199
	TypeLit  goto 69
	TypeName  goto 141
	UnaryExpr  goto 125

state 134
	Conversion:  Type.'(' Expression Conversion1 ')' 
	ReceiverType:  Type.    (210)

	'('  shift 200
	.  reduce 210 (src line 1381)


state 135
	MethodExpr:  ReceiverType.'.' MethodName 

	'.'  shift 201
	.  error


state 136
	Literal:  BasicLit.    (151)

	.  reduce 151 (src line 1083)


state 137
	Literal:  CompositeLit.    (152)

	.  reduce 152 (src line 1088)


state 138
	Literal:  FunctionLit.    (153)

	.  reduce 153 (src line 1092)

